头像上传和完成静态资源预览
